<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f2f2"
    android:paddingTop="180dp">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="#333333"
        android:textSize="24sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"/>

    <com.example.mystoryapp2.view.customview.EtEmailCustom
        android:id="@+id/ed_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_rounded"

        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="#a0a0a0"
        android:textSize="16sp" />

    <com.example.mystoryapp2.view.customview.EtPassCustom
        android:id="@+id/ed_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_rounded"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="#a0a0a0"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/acc"
        android:textColor="#333333"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        android:textColor="#0099cc"
        android:textSize="16sp" />

</LinearLayout>